# DOS68kSlack

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ci.yml  copilot-instructions.md  deploy.yml
.github/agents/: todo-infrastructure-d2.agent.md
.github/skills/terraform-refactor-module/: SKILL.md
.github/skills/terraform-style-guide/: SKILL.md
.github/workflows/: build-and-push.yml  copilot-setup-steps.yml
infra/: ecs-task-definition.json
infra/dev/: main.tf  outputs.tf  variables.tf
infra/dev/.terraform/modules/: modules.json
infra/modules/ecs-service/: alb.tf  autoscaling.tf  dns.tf  ecs.tf  iam.tf  outputs.tf  security_groups.tf  ssm.tf  variables.tf
src/: app.py  chatbot_client.py  config.py  logging_config.py  slack_handler.py  slack_verifier.py
tests/: test_all.py
