[project]
name = "dos68k-slack-bot"
version = "0.1.0"
description = "DOS68K Slack Bot – bridges Slack with the DOS68K RAG chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",
    "slack-sdk==3.34.0",
    "aiohttp>=3.11.18",
    "pydantic-settings==2.7.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
